--- a/rt/scss/main.scss
+++ b/rt/scss/main.scss
@@ -114,8 +114,8 @@ li{
   }
 
 .custom-header{ 
-	padding-top:15px;
-	padding-bottom:15px;
+	padding-top:40px;
+	padding-bottom:40px;
 	.logo { 
 		display: inline-block ; 
 		justify-content: left;
@@ -193,6 +193,9 @@ h4{
 	.panel-body{
 		overflow: hidden; 
 		padding:0;
+		img{
+			width:100%;
+		}
 	}
 	.panel-footer{
 		background-color: #b90707;
@@ -211,7 +214,8 @@ h4{
 
 
 .services-info{
-	padding:50px 0 10px;
+	padding-top:50px;
+	padding-bottom:10px;
 	 
 	img{
 		width:100%;
@@ -495,19 +499,49 @@ ul.list {
 
 
 @media (max-width: 576px) {
+	.custom-header{ 
+		padding:15px 0px 0px; 
+	}
 	.navbar-inverse{
-		background: none;
+		background: #efeded;
+		min-height: 45px;
+		.navbar-nav {
+			li {
+				a{
+					color: #000;
+					&:hover{
+						color:#c20404;
+					}
+				}
+			}
+		}
 		.navbar-toggle{
-			margin-top:2px;
-			margin-bottom:2px;
+			position: absolute;
+    		right: 0;
+			margin-top:5px;
+			margin-bottom:5px;
+			&:focus{background-color: #bdbcbc;}
+			.icon-bar {
+				background-color: #060606;
+			}
 		}
 	}
-	.custom-header #navbar {
+	.custom-header  {
+		#navbar{
 		float: right;
 		width: 100%;
 		margin-top: 13px;
 		margin: 0px;
 		text-align: center;
+		}
+		.logo{
+			display:block;
+			a{
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+		}
 	}
 	.social-network {
 		justify-content: center;
@@ -519,9 +553,9 @@ ul.list {
 	}
 
 	.short-contact-info{
-		span{
-			display:block;
-		}
+		float: none;
+		display: table;
+		margin:25px auto;
 	}
 	
 	.our-achiememnts{
@@ -550,6 +584,7 @@ ul.list {
 	}
 
 	.main-banner {
+		display:none;
 		.logo{
 			right:5px;
 			img{
