--- a/rt/scss/main.scss
+++ b/rt/scss/main.scss
@@ -97,7 +97,7 @@ li{
 	z-index: 99; /* Make sure it does not overlap */
 	border: none; /* Remove borders */
 	outline: none; /* Remove outline */
-	background-color: red; /* Set a background color */
+	background-color: rgba(0,0,0,.5); /* Set a background color */
 	color: white; /* Text color */
 	cursor: pointer; /* Add a mouse pointer on hover */
 	padding: 15px; /* Some padding */
@@ -153,6 +153,7 @@ li{
 				text-shadow: none;
 				text-transform: uppercase; 
 				font-size:16px;
+				padding-left:50px;
 			}
 		}
 	}
@@ -180,6 +181,10 @@ h4{
 
 .about-us{
 	margin:50px 0;
+	h2, p{
+		margin-bottom:30px;
+		text-align: justify;
+	}
 }
 
 .full-img{
@@ -395,12 +400,15 @@ ul.list {
 			bottom:30px;
 			text-align: left;
 			left:auto;
-			h2{
-				font-size:50px;  
-				color:#fff;
-				font-weight: 700;
-			}
+			display: flex;
+    justify-content: start;
+    align-items: center;
+    height: 650px;
+		
 		h3{
+			span{
+				font-size:50px;  
+			}
 			color:#fff;
 			text-align: left;
 			font-size:36px; 
@@ -429,6 +437,9 @@ ul.list {
 	margin-top:50px;
 	.col{
 		margin-bottom:0;
+		&:first-child{
+			padding:0px;
+		}
 	}
 	.mapouter{
 		height: 100%;
@@ -509,6 +520,7 @@ ul.list {
 			li {
 				a{
 					color: #000;
+					padding-left:15px;
 					&:hover{
 						color:#c20404;
 					}
@@ -577,14 +589,11 @@ ul.list {
 
 	.footer{
 		.d-flex{
-			display: table;
-			margin: 0 auto;
 			text-align: center;  
 		}
 	}
 
 	.main-banner {
-		display:none;
 		.logo{
 			right:5px;
 			img{
@@ -595,11 +604,12 @@ ul.list {
 	}
 	.main-banner{
 	#myCarousel{
-		margin-top: 15px;
 		.carousel-caption{
 			width:100%;
 			left:0px;
 			transform:none;
+			height: auto;
+    		background: rgba(0,0,0, 0.5);
 			h3{
 				font-size:24px;
 				transform:none;
@@ -613,6 +623,9 @@ ul.list {
 				object-fit: cover;
 				height:300px;
 			}
+		}
+		.picsum-img-wrapper{
+			height:auto;
 		}
 	}
 	}
