--- a/rt/css/main.css
+++ b/rt/css/main.css
@@ -73,6 +73,17 @@ li {
     list-style-position: inside;
     padding: 5px 0px; }
 
+/*card animation*/
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 1s all ease; }
+
+.reveal.active {
+  transform: translateY(0);
+  opacity: 1; }
+
 #myBtn {
   display: none;
   /* Hidden by default */
