--- a/rt/scss/main.scss
+++ b/rt/scss/main.scss
@@ -89,6 +89,19 @@ li{
 	}
 }
 
+/*card animation*/
+.reveal{
+	position: relative;
+	transform: translateY(150px);
+	opacity: 0;
+	transition: 1s all ease;
+  }
+  
+  .reveal.active{
+	transform: translateY(0);
+	opacity: 1;
+  }
+
 #myBtn {
 	display: none; /* Hidden by default */
 	position: fixed; /* Fixed/sticky position */
