--- a/rt/css/main.css
+++ b/rt/css/main.css
@@ -73,17 +73,6 @@ li {
     list-style-position: inside;
     padding: 5px 0px; }
 
-/*card animation*/
-.reveal {
-  position: relative;
-  transform: translateY(150px);
-  opacity: 0;
-  transition: 1s all ease; }
-
-.reveal.active {
-  transform: translateY(0);
-  opacity: 1; }
-
 #myBtn {
   display: none;
   /* Hidden by default */
@@ -142,6 +131,11 @@ li {
   background: #333;
   border: none;
   margin: 0; }
+  .navbar-inverse.sticky {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.6); }
   .navbar-inverse .navbar-nav {
     float: none;
     display: table;
@@ -411,6 +405,8 @@ ul.list {
   .navbar-inverse {
     background: #efeded;
     min-height: 45px; }
+    .navbar-inverse.sticky {
+      background: #efeded; }
     .navbar-inverse .navbar-nav li a {
       color: #000;
       padding-left: 15px; }
