--- a/rt/scss/main.scss
+++ b/rt/scss/main.scss
@@ -4,8 +4,8 @@ html {
 body {
 	color:#333333;
 	text-shadow: none !important;
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size:14px;
+	font-family: 'Roboto', sans-serif;;
+	font-size:16px;
 }
 
 svg {
@@ -206,6 +206,7 @@ h4{
 	.panel-body{
 		overflow: hidden; 
 		padding:0;
+		background: #c9c9c9;
 		img{
 			width:100%;
 		}
@@ -229,10 +230,14 @@ h4{
 .services-info{
 	padding-top:50px;
 	padding-bottom:10px;
+	.circle{
+		background:#c9c9c9;
+		overflow: hidden;
+		border-radius: 15px;
+	}
 	 
 	img{
 		width:100%;
-		border-radius: 15px;
 	}
 	.title-heading { 
 		text-align:center;
@@ -436,6 +441,9 @@ ul.list {
 	.highlight{
 		color:#c20404; 
 		font-weight: 700;
+		border-right:2px solid #000;
+		margin-right: 10px;
+		padding-right: 10px;
 	}
 }
 
@@ -518,6 +526,15 @@ ul.list {
 
 
 @media (max-width: 576px) {
+	.short-contact-info {
+		.highlight{
+			display: block;
+			text-align: center;
+			border-right:none;
+			margin-right: 0px;
+			padding-right: 0px;
+		}
+	}
 	.custom-header{ 
 		padding:15px 0px 0px; 
 	}
@@ -539,13 +556,15 @@ ul.list {
 			}
 		}
 		.navbar-toggle{
+			background-color:#c20404;
 			position: absolute;
     		right: 0;
 			margin-top:5px;
 			margin-bottom:5px;
-			&:focus{background-color: #bdbcbc;}
+			border:none;
+			&:focus{background-color: #c20404;}
 			.icon-bar {
-				background-color: #060606;
+				background-color: #fff;
 			}
 		}
 	}
@@ -622,7 +641,11 @@ ul.list {
 			height: auto;
     		background: rgba(0,0,0, 0.5);
 			h3{
-				font-size:24px;
+				span{
+					font-size:36px;
+					line-height:64px;
+				}
+				font-size:18px;
 				transform:none;
 				margin:0px;
 			}
