--- a/rt/scss/main.scss
+++ b/rt/scss/main.scss
@@ -120,11 +120,17 @@ li{
 	.logo { 
 		display: inline-block ; 
 		justify-content: left;
+		a{
+			text-decoration: none; 
+			color:#000;
+		}
 		img{
-			width: 70%;
+			width: 23%;
+			margin: -5px 10px 0 0;
 		}
 	span{
 		font-weight: 700;
+		font-size: 28px;
 	}
 	}
 	h2{
@@ -191,7 +197,6 @@ h4{
 	margin:50px 0;
 	h2, p{
 		margin-bottom:30px;
-		text-align: justify;
 	}
 }
 
@@ -560,8 +565,9 @@ ul.list {
 				a{
 					color: #000;
 					padding-left:15px;
-					&:hover{
+					&:hover, &:focus, &:active{
 						color:#c20404;
+						outline: none;
 					}
 				}
 			}
