--- a/rt/css/main.css
+++ b/rt/css/main.css
@@ -121,8 +121,10 @@ li {
       width: 23%;
       margin: -5px 10px 0 0; }
     .custom-header .logo span {
-      font-weight: 700;
-      font-size: 28px; }
+    font-weight: 900;
+    font-size: 36px;
+    text-shadow: 2px 2px 0px #fff, -2px -2px 0px #fff, 0px 0px 10px #000080;
+    color: #2e2d2d; }
   .custom-header h2 {
     text-transform: uppercase;
     margin: 0px; }
