--- a/rt/scss/main.scss
+++ b/rt/scss/main.scss
@@ -129,8 +129,10 @@ li{
 			margin: -5px 10px 0 0;
 		}
 	span{
-		font-weight: 700;
-		font-size: 28px;
+		font-weight: 900;
+		font-size: 36px;
+		text-shadow: 2px 2px 0px #fff, -2px -2px 0px #fff, 0px 0px 10px #000080;
+		color: #2e2d2d;
 	}
 	}
 	h2{
