--- a/rt/css/main.css
+++ b/rt/css/main.css
@@ -109,8 +109,8 @@ li {
   background: #fff; }
 
 .custom-header {
-  padding-top: 40px;
-  padding-bottom: 40px; }
+  padding-top: 25px;
+  padding-bottom: 25px; }
   .custom-header .logo {
     display: inline-block;
     justify-content: left; }
@@ -118,13 +118,12 @@ li {
       text-decoration: none;
       color: #000; }
     .custom-header .logo img {
-      width: 23%;
-      margin: -5px 10px 0 0; }
+      width: 70%; }
     .custom-header .logo span {
-    font-weight: 900;
-    font-size: 36px;
-    text-shadow: 2px 2px 0px #fff, -2px -2px 0px #fff, 0px 0px 10px #000080;
-    color: #2e2d2d; }
+      font-weight: 900;
+      font-size: 36px;
+      text-shadow: 2px 2px 0px #fff, -2px -2px 0px #fff, 0px 0px 10px #000080;
+      color: #2e2d2d; }
   .custom-header h2 {
     text-transform: uppercase;
     margin: 0px; }
@@ -350,7 +349,7 @@ ul.list {
   color: #000000;
   font-size: 18px;
   float: right;
-  margin-top: 10px; }
+  margin-top: 16px; }
   .short-contact-info .highlight {
     color: #c20404;
     font-weight: 700;
